Fix interface issues on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,7 +24,6 @@
   /* Custom Shadows */
   --shadow-module: inset 0 2px 0 0 var(--color-neutral-50),
     inset 0 -2px 0 0 var(--color-primary-600),
-    inset 0 30px 0 0 var(--color-neutral-100),
     0 18px 19px 0 var(--color-primary-600), 0 2px 5px 0 var(--color-primary-600);
 
   --shadow-button: inset 0 2px 0 0 var(--color-neutral-50),
